@@ -1,5 +1,6 @@
 0.2.5+ (in development)
 ------------------------------------------------------------------------
+- Fix: [#6123, #7907, #9472, #11028] Cannot build some track designs with 4 stations.
 - Fix: [#11027] Third color on walls becomes black when saving.
 
 0.2.5 (2020-03-24)
